# NEmusicApi-python

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
NEmusicApi/: __init__.py  api.py  base_api.py  baseapi.py  exception.py  rawapi.py  type.py
test/: test.py  test_api.py  test_base_api.py  test_raw_api.py
