[tool.poetry]
name = "nemusicapi"
version = "0.0.1"
description = "A Netsase music api"
authors = ["yuyi2439"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pycryptodome = "^3.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
